# soup

./: .gitignore  CLAUDE.md  CNAME  README.md  index.html  pyproject.toml  soup.js  test_chamber.py  test_utils.py
.ai/: note-phase25-analysis.md  note-phase3.2-analysis.md  note-soup-analysis.md
.github/: copilot-instructions.md
docs/: design-document.md  parallel-patterns.md  phase-1.0.md  phase-1.1.md  phase-1.2.md  phase-1.4.md  phase-2.2.md  phase-2.4.md  phase-4.0.md  phase-4.1.md  phase-4.2.md  phase-4.3.md  phase-4.4.md
docs/archived/: phase-1.2.md  phase-2.3.md  phase-2.5.md  phase-2.6.md  phase-3.2.md
docs/phases/: phase-1.3.md  phase-2.0.md  phase-2.1.md  phase-3.0.md  phase-3.1.md  phase-3.3.md
docs/summaries/: project-20250609.md
soup/: chamber.py  chamber_to_ascii.py  constants.py  image_gen.py  main.py  types.py  utils.py
