[project]
name = "soup"
version = "0.1.0"
description = "Biome engine of Machi - cellular automata simulation"
authors = [
    {name = "Jin"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "fire (>=0.6.0,<1.0.0)"
]


[tool.poetry.scripts]
soup = "soup.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
